# Villiage-Sims

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  progress.md  test-milestone4.js  tsconfig.app.json  vite.config.ts
docs/: villagesim-spec.md
docs/superpowers/plans/: 2026-07-16-milestone-1.md  2026-07-17-milestone-2.md  2026-07-17-milestone-3.md  2026-07-18-milestone-4.md  2026-07-19-milestone-5.md  2026-07-20-milestone-6.md  2026-07-24-milestone-7.md  2026-07-24-milestone-8.md
docs/superpowers/specs/: 2026-07-16-milestone-1-design.md  2026-07-17-milestone-2-design.md  2026-07-17-milestone-3-design.md  2026-07-18-milestone-4-design.md  2026-07-19-milestone-5-design.md  2026-07-20-milestone-6-design.md  (+2 more)
src/: App.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/: buildings.json  crops.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  snapshot.rs
src-tauri/src/sim/: agents.rs  buildings.rs  catalog.rs  clock.rs  commands.rs  crops.rs  economy.rs  jobs.rs  mod.rs  needs.rs  nodes.rs  pathfind.rs  resources.rs  terrain.rs  utility.rs  world.rs
src/render/: Canvas.tsx  camera.test.ts  camera.ts  drawEntities.ts  drawGhost.ts  drawTerrain.ts
src/state/: demoTerrain.test.ts  demoTerrain.ts  demoWorld.test.ts  demoWorld.ts  pathfind.test.ts  pathfind.ts  snapshot.test.ts  snapshot.ts  spawn-check.test.ts  transport.ts  types.ts
src/ui/: BuildMenu.tsx  ClockBar.tsx  ResourceBar.tsx  VillagerPanel.tsx
