[package]
name = "village-sim"
version = "0.1.0"
description = "A desktop village simulator with autonomous villagers"
authors = ["VillageSim contributors"]
edition = "2024"
rust-version = "1.85"

[lib]
name = "villagesim_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["sync"] }
